pleo-payment-provider/deploy/ingress-resourse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-payment-provider
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pp
        pathType: Prefix
        backend:
          service:
            name: pleo-payment-provider-service
            port:
              number: 9000
